kubernetes/dev/backend/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: svc-wallettrack-backend
spec:
  selector:
    app: wallettrack-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
