kubernetes/dev/backend/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: wallettrack-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: backend.dev.k3s-master.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-wallettrack-backend
                port:
                  number: 80
